--- a/deployment/base/deployment.yaml
+++ b/deployment/base/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: nginx
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: nginx
@@ -16,7 +16,18 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.14-alpine
-        #image: nginx:1.15-alpine
+        image: nginx:1.16-alpine
         ports:
         - containerPort: 80
+        volumeMounts:
+        - name: index
+          mountPath: /usr/share/nginx/html/index.html
+          subPath: index.html
+        resources:
+          limits:
+            cpu: "0.1"
+            memory: 128Mi
+      volumes:
+      - name: index
+        configMap:
+          name: index
