--- a/deployment/overlay/ingress/single/ingress.yaml
+++ b/deployment/overlay/ingress/single/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: single-ingress
+  name: demo-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
