--- a/deployment/overlay/ingress/fanout/ingress.yaml
+++ b/deployment/overlay/ingress/fanout/ingress.yaml
@@ -2,6 +2,9 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: demo-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
 spec:
   rules:
   - host: training-a.cl.monach.us
@@ -9,7 +12,7 @@ spec:
       paths:
       - path: /
         backend:
-          serviceName: rancher-demo
+          serviceName: rancher-demo-external
           servicePort: 80
       - path: /nginx
         backend:
